--- a/i3/config
+++ b/i3/config
@@ -200,3 +200,5 @@ exec --no-startup-id /home/andrew/.local/bin/autotiling
 # Screenshot
 bindsym Print exec NOW=$(date +%b-%d_%H:%M) && maim --format png --select > ~/screenshots/screenshot_$NOW.png && xclip -selection clip -t image/png ~/screenshots/screenshot_$NOW.png
 bindsym $mod+Print exec --no-startup-id peek
+bindsym $mod+w exec --no-startup-id /home/andrew/.local/bin/safe
+bindsym $mod+a exec --no-startup-id /home/andrew/.local/bin/setwal
